        - DBIC::FilterColumn now properly bypasses \'' and \[] literals, just
          like the rest of DBIC
        - DBIC::FilterColumn "from_storage" handler is now invoked on NULLs
          returned from storage
        - Custom condition relationships are now invoked with a slightly
          different signature (existing coderefs will continue to work)

    * Fixes
        - Fix Resultset delete/update affecting *THE ENTIRE TABLE* in cases
          of empty (due to conditions) resultsets with multi-column keys
        - Fix on_connect_* not always firing in some cases - a race condition
          existed between storage accessor setters and the determine_driver
          routines, triggering a connection before the set-cycle is finished
        - Fix incorrect handling of custom relationship conditions returning
          SQLA literal expressions
        - Fix multi-value literal populate not working with simplified bind
          specifications
        - Massively improve the implied resultset condition parsing - now all
          applicable conditions within a resultset should be properly picked
          up by create() and populate()
        - Ensure definitive condition extractor handles bizarre corner cases
          without bombing out (RT#93244)
        - Fix set_inflated_column incorrectly handling \[] literals (GH#44)
        - Ensure that setting a column to a literal invariably marks it dirty
        - Fix inability to handle multiple consecutive transactions with
          savepoints on DBD::SQLite < 1.39

    * Misc
        - Stop explicitly stringifying objects before passing them to DBI,
          instead assume that the DBI/DBD combo will take care of things
        - Remove ::ResultSource::resolve_condition - the underlying machinery
          is in flux, and the method has had a deprecation warning for 5 years

0.08270 2014-01-30 21:54 (PST)
    * Fixes
        - Fix 0.08260 regression in DBD::SQLite bound int handling. Inserted